fix: smaller blobs on mobile

--- a/src/tjenesteomrader/components/entrance/entrance.module.css
+++ b/src/tjenesteomrader/components/entrance/entrance.module.css
@@ -96,7 +96,7 @@
   }
 
   .serviceArea__top img {
-    width: 10rem;
+    width: 40vw;
     height: auto;
   }
 
